--- a/package.json
+++ b/package.json
@@ -16,8 +16,5 @@
   "bugs": {
     "url": "https://github.com/keitaroutakahashi/npm-test/issues"
   },
-  "homepage": "https://github.com/keitaroutakahashi/npm-test#readme",
-  "dependencies": {
-    "@k-taro/npm-test": "^1.0.0"
-  }
+  "homepage": "https://github.com/keitaroutakahashi/npm-test#readme"
 }
